--- a/clojure-stuff/bases/web/resources/public/web/css/output.css
+++ b/clojure-stuff/bases/web/resources/public/web/css/output.css
@@ -237,6 +237,9 @@
   .h-screen {
     height: 100vh;
   }
+  .w-0 {
+    width: calc(var(--spacing) * 0);
+  }
   .w-0\.5 {
     width: calc(var(--spacing) * 0.5);
   }
@@ -446,6 +449,13 @@
   .select-none {
     -webkit-user-select: none;
     user-select: none;
+  }
+  .hover\:w-0\.5 {
+    &:hover {
+      @media (hover: hover) {
+        width: calc(var(--spacing) * 0.5);
+      }
+    }
   }
   .hover\:bg-blue-500 {
     &:hover {
