--- a/clojure-stuff/bases/web/resources/public/web/css/output.css
+++ b/clojure-stuff/bases/web/resources/public/web/css/output.css
@@ -209,6 +209,15 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .z-10 {
+    z-index: 10;
+  }
+  .order-0 {
+    order: 0;
+  }
+  .order-1 {
+    order: 1;
+  }
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
   }
@@ -254,6 +263,9 @@
   .ml-0\.5 {
     margin-left: calc(var(--spacing) * 0.5);
   }
+  .ml-1 {
+    margin-left: calc(var(--spacing) * 1);
+  }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
@@ -269,11 +281,20 @@
   .flex {
     display: flex;
   }
+  .grid {
+    display: grid;
+  }
+  .hidden {
+    display: none;
+  }
   .inline-flex {
     display: inline-flex;
   }
   .table {
     display: table;
+  }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
   }
   .h-7 {
     height: calc(var(--spacing) * 7);
@@ -284,8 +305,14 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
+  .h-\[1px\] {
+    height: 1px;
+  }
   .h-\[10px\] {
     height: 10px;
+  }
+  .h-\[18px\] {
+    height: 18px;
   }
   .h-\[22px\] {
     height: 22px;
@@ -308,11 +335,17 @@
   .w-2 {
     width: calc(var(--spacing) * 2);
   }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
+  }
   .w-7 {
     width: calc(var(--spacing) * 7);
   }
   .w-24 {
     width: calc(var(--spacing) * 24);
+  }
+  .w-\[1px\] {
+    width: 1px;
   }
   .w-\[10px\] {
     width: 10px;
@@ -428,6 +461,9 @@
   .border-red-600 {
     border-color: var(--color-red-600);
   }
+  .bg-\[rgba\(0\,0\,0\,0\.03\)\] {
+    background-color: rgba(0,0,0,0.03);
+  }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
   }
@@ -491,6 +527,9 @@
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
+  .pl-\[3px\] {
+    padding-left: 3px;
+  }
   .text-left {
     text-align: left;
   }
@@ -541,6 +580,9 @@
   }
   .whitespace-nowrap {
     white-space: nowrap;
+  }
+  .text-\[\#32302c\] {
+    color: #32302c;
   }
   .text-black {
     color: var(--color-black);
@@ -619,6 +661,10 @@
   .duration-75 {
     --tw-duration: 75ms;
     transition-duration: 75ms;
+  }
+  .duration-150 {
+    --tw-duration: 150ms;
+    transition-duration: 150ms;
   }
   .duration-200 {
     --tw-duration: 200ms;
